--- a/rest/src/main/resources/templates/product/product-list.html
+++ b/rest/src/main/resources/templates/product/product-list.html
@@ -21,10 +21,31 @@
 			.productCount:focus {
 				outline: none;
 			}
+			.register-ready {
+				width: 100%;
+			}
+			.register-wrap {
+				display: none;
+			}
 		</style>
 	</head>
 	<body>
 		<div>
+			<button type="button" class="register-ready">상품 추가</button>
+			<div class="register-wrap" th:object="${productForm}">
+				<div>
+					<input type="text" th:field="*{productName}" placeholder="상품명">
+				</div>
+				<div>
+					<input type="text" th:field="*{productStock}" placeholder="상품재고">
+				</div>
+				<div>
+					<input type="text" th:field="*{productPrice}" placeholder="상품가격">
+				</div>
+				<!--input type="button"이 아닌 "submit"이다.-->
+				<input type="button" class="register-done" value="등록" >				
+			</div>
+			
 			<table border="1">
 				<tr>
 					<th>단일 선택</th>
@@ -100,6 +121,26 @@
 				
 				$form.submit();
 			}
+		});
+	</script>
+	<!--register-ready 버튼을 눌렀을 때 register-wrap 보이게 하기-->
+	<script>
+		const $registerReady = $("button.register-ready");
+		const $registerDone = $("input.register-done");
+		const $registerWrap = $("div.register-wrap");
+		
+		$registerReady.on("click", function() {
+			$(this).hide();
+			//$("div.register-wrap").show();
+			$registerDone.show();
+			$registerWrap.show();
+		});
+		
+		$registerDone.on("click", function() {
+			//$(this).hide();
+			$registerWrap.hide();
+			//$("div.register-wrap").hide();
+			$registerReady.show();
 		});
 	</script>
 </html>
